--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,7 @@
     <link rel ="stylesheet" type ="text/css" href="{{url_for('static',filename='login.css')}}">
 </head>
 <body>
+    <form action = "{{url_for('login')}} " method ='POST'>
     <div class="container">
         <div id="flashContainer"></div>
         
@@ -31,5 +32,6 @@
             <p><a href="{{url_for('home')}}">Back to Home</a></p>
         </div>
     </div>
+    </form>
 </body>
 </html>
