--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,7 @@
     <link rel = "stylesheet" type = "text/css" href = "{{url_for('static',filename='register.css')}}">
 </head>
 <body>
+    <form action = "{{url_for('register')}}" methods ='POST'>
      <div class="container">
         <div id="flashContainer"></div>
         
@@ -37,5 +38,6 @@
             <p><a href="{{url_for('home')}}">Back to Home</a></p>
         </div>
     </div>
+    </form>
 </body>
 </html>
